--- a/docs/phase2/relatorio.tex
+++ b/docs/phase2/relatorio.tex
@@ -216,7 +216,7 @@ Através da utilização da \textit{sphere} gerada no \textit{generator},
 aliado ao poder da translação e \textit{scale}, permitiu que se construísse
 os vários planetas na posição previamente calculada com a escala definida.
 
-De salientar a utilização da figura geométrica \textbf{\textit{tórus}} para 
+De salientar a utilização da figura geométrica \textbf{\textit{torus}} para 
 a representação dos anéis de saturno.
 
 Em suma, foi construído um grupo que corresponde à origem, onde é definido o sol.
@@ -257,7 +257,7 @@ definidos pela equipa docente e, ainda, acrescentar algumas funcionalidades extr
 Em particular, nesta fase foi implementado:
 \begin{itemize}
     \item Transformações geométricas
-    \item Geração do tórus
+    \item Geração do torus
     \item Navegação com câmera FPS
     \item Utilização de VBO
     \item Construção do modelo do sistema solar
