--- a/docs/phase3/conclusoes.tex
+++ b/docs/phase3/conclusoes.tex
@@ -13,12 +13,14 @@ ocorreu no decorrer da presente fase, nomeadamente no desenho de curvas.
 Analogamente às fases anteriores, foi possível implemetar todos os requisitos propostos 
 no enunciado, com a adição de alguns parâmetros extra.
 É de notar nesta fase:
-– Criação de um módulo para a construção de superfícies de \textit{Bezier}
-– Rotação com base num dado tempo
-– Translação por uma curva, dados o tempo e os pontos de controlo
-– Translação com base nos pontos de controlo definidos pelo utilizador, numa matriz
-– Transformação do sistema solar para um modelo dinâmico
-- Adição ao modelo de um cometa, que segue a sua própria trajetória, definida numa curva \textit{Catmull-Rom}
+\begin{itemize}
+    \item Criação de um módulo para a construção de superfícies de \textit{Bezier}.
+    \item Rotação com base num dado tempo.
+    \item Translação por uma curva, dados o tempo e os pontos de controlo.
+    \item Translação com base nos pontos de controlo definidos pelo utilizador, numa matriz.
+    \item Transformação do sistema solar para um modelo dinâmico.
+    \item Adição ao modelo de um cometa, que segue a sua própria trajetória, definida numa curva \textit{Catmull-Rom}.
+\end{itemize}
 
 Um dos pontos mencionados, na forma de trabalho futuro, era relativo à evolução dos \textit{VBOs}
 para permitirem o uso de índices. Na presente iteração permanece uma componente a adicionar, sendo
