--- a/docs/phase4/generator.tex
+++ b/docs/phase4/generator.tex
@@ -24,7 +24,7 @@ procurou-se definir um módulo que facilmente representaria uma matriz.
 \begin{code}
     \captionof{listing}{Classe Matrix}
     \label{code:class_matrix}
-    \inputminted[firstline=14, lastline=19]{cpp}{../../cartesian/matrix.h}
+    % \inputminted[firstline=14, lastline=19]{cpp}{../../cartesian/matrix.h}
 \end{code}
 
 Deste modo, encontram-se na classe todas as operações relativamente a uma matriz e entre matrizes.
@@ -39,7 +39,7 @@ e aatravés de um conjunto de matrizes default, cf \ref{code:defmat}.
 \begin{code}
     \captionof{listing}{Enum de tipos de matrizes default}
     \label{code:defmat}
-    \inputminted[firstline=7, lastline=12]{cpp}{../../cartesian/matrix.h}
+    % \inputminted[firstline=7, lastline=12]{cpp}{../../cartesian/matrix.h}
 \end{code}
 \dots como são sempre estáticos facilita o grupo ao usá-los nos cálculos dos pontos de uma curvas.
 
